Anonymous | Login | 2021-01-17 18:46 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031986 | Community | [OCCT] OCCT:Visualization | public | 2020-12-07 12:04 | 2020-12-12 13:46 | ||||||||
Reporter | NickZ | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | Windows | OS | Windows | OS Version | 10 | ||||||||
Product Version | [OCCT] 7.4.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031986: Visualization - Regression in StdPrs_WFDeflectionRestrictedFace::Add() | ||||||||||||
Description | See https://old.opencascade.com/content/stdprswfdeflectionrestrictedface-produces-overly-dense-sampling [^] Cylindrical face of a truncated cone returns a million points curve from the second Add() of StdPrs_WFDeflectionRestrictedFace | ||||||||||||
Steps To Reproduce | https://old.opencascade.com/content/stdprswfdeflectionrestrictedface-produces-overly-dense-sampling [^] | ||||||||||||
Additional information and documentation updates | I have fixed the problem. See the two lines marked with AAA in the attached file. The problem was that the redundant line in the function, present in v6.9.1: if ( Orient == TopAbs_FORWARD || Orient == TopAbs_REVERSED ) { was deleted in v7.5.0 or earlier, but wrong closing curly bracket was deleted with that. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not required | ||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|||||||||||||
|
![]() |
|
(0097409) git (administrator) 2020-12-07 13:38 |
Branch CR31986 has been created by kgv. SHA-1: cb0371692b6f48faf6c23bdb5d95f7bbe3553a5a Detailed log of new commits: Author: kgv Date: Mon Dec 7 13:39:07 2020 +0300 0031986: Visualization - Regression in StdPrs_WFDeflectionRestrictedFace::Add() Fixed misplaced closing bracket after 0030146 fix. |
(0097410) kgv (developer) 2020-12-07 13:44 edited on: 2020-12-07 15:02 |
NickZ, thanks for analysis - it is caused by a fix for 0030146 (apparently, bracket was misplaced accidentally due to broken indentation / mixed tabulations in modified code). |
(0097411) git (administrator) 2020-12-07 13:48 |
Branch CR31986 has been updated forcibly by kgv. SHA-1: c79ef83a317e4fb8e4f43c6c8e1618a9b34a41ce |
(0097412) kgv (developer) 2020-12-07 15:01 |
Please raise the patch - OCCT branch: CR31986. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31986-master-KGV/ [^] |
(0097520) bugmaster (administrator) 2020-12-12 12:55 |
Combination - OCCT branch : IR-2020-12-11 master SHA - a25d5aaa30ec81c1fb94a9a394b8afa740611203 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-12-11 SHA - 32a7f74b10f27f9251808f20fdfe1444ff30c60b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17756.510000000126 / 18090.92999999998 [-1.85%] Products Total CPU difference: 12330.210000000125 / 12342.950000000128 [-0.10%] Windows-64-VC14: OCCT Total CPU difference: 19429.09375 / 19751.71875 [-1.63%] Products Total CPU difference: 13755.5 / 13772.515625 [-0.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0097535) git (administrator) 2020-12-12 13:46 |
Branch CR31986 has been deleted by inv. SHA-1: c79ef83a317e4fb8e4f43c6c8e1618a9b34a41ce |
![]() |
|||
occt: master c74e3dc3
Timestamp: 2020-12-07 10:39:07 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031986: Visualization - Regression in StdPrs_WFDeflectionRestrictedFace::Add() Fixed misplaced closing bracket after 0030146 fix. |
||
mod - src/StdPrs/StdPrs_WFDeflectionRestrictedFace.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-12-07 12:04 | NickZ | New Issue | |
2020-12-07 12:04 | NickZ | Assigned To | => kgv |
2020-12-07 12:04 | NickZ | File Added: StdPrs_WFDeflectionRestrictedFace.cxx | |
2020-12-07 12:39 | kgv | Relationship added | child of 0030146 |
2020-12-07 12:39 | kgv | Product Version | 7.5.0 => 7.4.0 |
2020-12-07 12:39 | kgv | Target Version | => 7.6.0* |
2020-12-07 13:37 | kgv | Summary | Regression in StdPrs_WFDeflectionRestrictedFace::Add() => Visualization - Regression in StdPrs_WFDeflectionRestrictedFace::Add() |
2020-12-07 13:38 | git | Note Added: 0097409 | |
2020-12-07 13:44 | kgv | Note Added: 0097410 | |
2020-12-07 13:45 | kgv | Relationship added | related to 0031973 |
2020-12-07 13:48 | git | Note Added: 0097411 | |
2020-12-07 15:01 | kgv | Note Added: 0097412 | |
2020-12-07 15:01 | kgv | Assigned To | kgv => bugmaster |
2020-12-07 15:01 | kgv | Status | new => resolved |
2020-12-07 15:01 | kgv | Status | resolved => reviewed |
2020-12-07 15:01 | kgv | Note Edited: 0097410 | View Revisions |
2020-12-07 15:02 | kgv | Note Edited: 0097410 | View Revisions |
2020-12-07 15:02 | kgv | Note Edited: 0097410 | View Revisions |
2020-12-12 12:55 | bugmaster | Note Added: 0097520 | |
2020-12-12 12:55 | bugmaster | Status | reviewed => tested |
2020-12-12 12:57 | bugmaster | Test case number | => Not required |
2020-12-12 13:13 | bugmaster | Changeset attached | => occt master c74e3dc3 |
2020-12-12 13:13 | bugmaster | Status | tested => verified |
2020-12-12 13:13 | bugmaster | Resolution | open => fixed |
2020-12-12 13:46 | git | Note Added: 0097535 |
Copyright © 2000 - 2021 MantisBT Team |